grammar/OnionParser.py
# Generated from .//grammar//Onion.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class OnionParser ( Parser ):

    grammarFileName = "Onion.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'('", "'let'", "')'", "'+'", "'-'", "'*'", 
                     "'/'", "'=='", "'!='", "'<'", "'>'", "'<='", "'>='", 
                     "'not'", "'['", "','", "']'", "'if'", "'then'", "'else'", 
                     "'print'", "'for'", "'macro'", "'class'", "'def'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "IDENTIFIER", "INT", "BOOL", 
                      "STRING", "WS", "COMMENT", "LINE_COMMENT" ]

    RULE_program = 0
    RULE_statement = 1
    RULE_assignment = 2
    RULE_expression = 3
    RULE_arithmeticExpr = 4
    RULE_booleanExpr = 5
    RULE_arrayExpr = 6
    RULE_ifExpr = 7
    RULE_functionCall = 8
    RULE_printStatement = 9
    RULE_loopStatement = 10
    RULE_macroDef = 11
    RULE_macroCall = 12
    RULE_classDef = 13
    RULE_classBody = 14
    RULE_methodDef = 15
    RULE_block = 16
    RULE_literal = 17

    ruleNames =  [ "program", "statement", "assignment", "expression", "arithmeticExpr", 
                   "booleanExpr", "arrayExpr", "ifExpr", "functionCall", 
                   "printStatement", "loopStatement", "macroDef", "macroCall", 
                   "classDef", "classBody", "methodDef", "block", "literal" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    IDENTIFIER=26
    INT=27
    BOOL=28
    STRING=29
    WS=30
    COMMENT=31
    LINE_COMMENT=32

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(OnionParser.StatementContext)
            else:
                return self.getTypedRuleContext(OnionParser.StatementContext,i)


        def getRuleIndex(self):
            return OnionParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = OnionParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 37 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 36
                self.statement()
                self.state = 39 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & 1006632962) != 0)):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def assignment(self):
            return self.getTypedRuleContext(OnionParser.AssignmentContext,0)


        def expression(self):
            return self.getTypedRuleContext(OnionParser.ExpressionContext,0)


        def printStatement(self):
            return self.getTypedRuleContext(OnionParser.PrintStatementContext,0)


        def macroDef(self):
            return self.getTypedRuleContext(OnionParser.MacroDefContext,0)


        def classDef(self):
            return self.getTypedRuleContext(OnionParser.ClassDefContext,0)


        def loopStatement(self):
            return self.getTypedRuleContext(OnionParser.LoopStatementContext,0)


        def getRuleIndex(self):
            return OnionParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatement" ):
                return visitor.visitStatement(self)
            else:
                return visitor.visitChildren(self)




    def statement(self):

        localctx = OnionParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_statement)
        try:
            self.state = 47
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 41
                self.assignment()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 42
                self.expression()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 43
                self.printStatement()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 44
                self.macroDef()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 45
                self.classDef()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 46
                self.loopStatement()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssignmentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self, i:int=None):
            if i is None:
                return self.getTokens(OnionParser.IDENTIFIER)
            else:
                return self.getToken(OnionParser.IDENTIFIER, i)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(OnionParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(OnionParser.ExpressionContext,i)


        def getRuleIndex(self):
            return OnionParser.RULE_assignment

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssignment" ):
                listener.enterAssignment(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssignment" ):
                listener.exitAssignment(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssignment" ):
                return visitor.visitAssignment(self)
            else:
                return visitor.visitChildren(self)




    def assignment(self):

        localctx = OnionParser.AssignmentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_assignment)
        self._la = 0 # Token type
        try:
            self.state = 68
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 49
                self.match(OnionParser.T__0)
                self.state = 50
                self.match(OnionParser.T__1)
                self.state = 51
                self.match(OnionParser.IDENTIFIER)
                self.state = 52
                self.expression()
                self.state = 53
                self.match(OnionParser.T__2)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 55
                self.match(OnionParser.T__0)
                self.state = 56
                self.match(OnionParser.T__1)
                self.state = 62 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while True:
                    self.state = 57
                    self.match(OnionParser.T__0)
                    self.state = 58
                    self.match(OnionParser.IDENTIFIER)
                    self.state = 59
                    self.expression()
                    self.state = 60
                    self.match(OnionParser.T__2)
                    self.state = 64 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if not (_la==1):
                        break

                self.state = 66
                self.match(OnionParser.T__2)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def literal(self):
            return self.getTypedRuleContext(OnionParser.LiteralContext,0)


        def IDENTIFIER(self):
            return self.getToken(OnionParser.IDENTIFIER, 0)

        def arithmeticExpr(self):
            return self.getTypedRuleContext(OnionParser.ArithmeticExprContext,0)


        def booleanExpr(self):
            return self.getTypedRuleContext(OnionParser.BooleanExprContext,0)


        def arrayExpr(self):
            return self.getTypedRuleContext(OnionParser.ArrayExprContext,0)


        def functionCall(self):
            return self.getTypedRuleContext(OnionParser.FunctionCallContext,0)


        def ifExpr(self):
            return self.getTypedRuleContext(OnionParser.IfExprContext,0)


        def macroCall(self):
            return self.getTypedRuleContext(OnionParser.MacroCallContext,0)


        def getRuleIndex(self):
            return OnionParser.RULE_expression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpression" ):
                listener.enterExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpression" ):
                listener.exitExpression(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpression" ):
                return visitor.visitExpression(self)
            else:
                return visitor.visitChildren(self)




    def expression(self):

        localctx = OnionParser.ExpressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_expression)
        try:
            self.state = 78
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 70
                self.literal()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 71
                self.match(OnionParser.IDENTIFIER)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 72
                self.arithmeticExpr()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 73
                self.booleanExpr()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 74
                self.arrayExpr()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 75
                self.functionCall()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 76
                self.ifExpr()
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 77
                self.macroCall()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArithmeticExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(OnionParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(OnionParser.ExpressionContext,i)


        def getRuleIndex(self):
            return OnionParser.RULE_arithmeticExpr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterArithmeticExpr" ):
                listener.enterArithmeticExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitArithmeticExpr" ):
                listener.exitArithmeticExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArithmeticExpr" ):
                return visitor.visitArithmeticExpr(self)
            else:
                return visitor.visitChildren(self)




    def arithmeticExpr(self):

        localctx = OnionParser.ArithmeticExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_arithmeticExpr)
        try:
            self.state = 104
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 80
                self.match(OnionParser.T__0)
                self.state = 81
                self.match(OnionParser.T__3)
                self.state = 82
                self.expression()
                self.state = 83
                self.expression()
                self.state = 84
                self.match(OnionParser.T__2)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 86
                self.match(OnionParser.T__0)
                self.state = 87
                self.match(OnionParser.T__4)
                self.state = 88
                self.expression()
                self.state = 89
                self.expression()
                self.state = 90
                self.match(OnionParser.T__2)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 92
                self.match(OnionParser.T__0)
                self.state = 93
                self.match(OnionParser.T__5)
                self.state = 94
                self.expression()
                self.state = 95
                self.expression()
                self.state = 96
                self.match(OnionParser.T__2)
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 98
                self.match(OnionParser.T__0)
                self.state = 99
                self.match(OnionParser.T__6)
                self.state = 100
                self.expression()
                self.state = 101
                self.expression()
                self.state = 102
                self.match(OnionParser.T__2)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BooleanExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(OnionParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(OnionParser.ExpressionContext,i)


        def getRuleIndex(self):
            return OnionParser.RULE_booleanExpr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBooleanExpr" ):
                listener.enterBooleanExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBooleanExpr" ):
                listener.exitBooleanExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBooleanExpr" ):
                return visitor.visitBooleanExpr(self)
            else:
                return visitor.visitChildren(self)




    def booleanExpr(self):

        localctx = OnionParser.BooleanExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_booleanExpr)
        try:
            self.state = 147
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 106
                self.match(OnionParser.T__0)
                self.state = 107
                self.match(OnionParser.T__7)
                self.state = 108
                self.expression()
                self.state = 109
                self.expression()
                self.state = 110
                self.match(OnionParser.T__2)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 112
                self.match(OnionParser.T__0)
                self.state = 113
                self.match(OnionParser.T__8)
                self.state = 114
                self.expression()
                self.state = 115
                self.expression()
                self.state = 116
                self.match(OnionParser.T__2)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 118
                self.match(OnionParser.T__0)
                self.state = 119
                self.match(OnionParser.T__9)
                self.state = 120
                self.expression()
                self.state = 121
                self.expression()
                self.state = 122
                self.match(OnionParser.T__2)
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 124
                self.match(OnionParser.T__0)
                self.state = 125
                self.match(OnionParser.T__10)
                self.state = 126
                self.expression()
                self.state = 127
                self.expression()
                self.state = 128
                self.match(OnionParser.T__2)
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 130
                self.match(OnionParser.T__0)
                self.state = 131
                self.match(OnionParser.T__11)
                self.state = 132
                self.expression()
                self.state = 133
                self.expression()
                self.state = 134
                self.match(OnionParser.T__2)
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 136
                self.match(OnionParser.T__0)
                self.state = 137
                self.match(OnionParser.T__12)
                self.state = 138
                self.expression()
                self.state = 139
                self.expression()
                self.state = 140
                self.match(OnionParser.T__2)
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 142
                self.match(OnionParser.T__0)
                self.state = 143
                self.match(OnionParser.T__13)
                self.state = 144
                self.expression()
                self.state = 145
                self.match(OnionParser.T__2)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArrayExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(OnionParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(OnionParser.ExpressionContext,i)


        def getRuleIndex(self):
            return OnionParser.RULE_arrayExpr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterArrayExpr" ):
                listener.enterArrayExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitArrayExpr" ):
                listener.exitArrayExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArrayExpr" ):
                return visitor.visitArrayExpr(self)
            else:
                return visitor.visitChildren(self)




    def arrayExpr(self):

        localctx = OnionParser.ArrayExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_arrayExpr)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 149
            self.match(OnionParser.T__0)
            self.state = 150
            self.match(OnionParser.T__14)
            self.state = 151
            self.expression()
            self.state = 156
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==16:
                self.state = 152
                self.match(OnionParser.T__15)
                self.state = 153
                self.expression()
                self.state = 158
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 159
            self.match(OnionParser.T__16)
            self.state = 160
            self.match(OnionParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IfExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self):
            return self.getTypedRuleContext(OnionParser.ExpressionContext,0)


        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(OnionParser.StatementContext)
            else:
                return self.getTypedRuleContext(OnionParser.StatementContext,i)


        def getRuleIndex(self):
            return OnionParser.RULE_ifExpr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIfExpr" ):
                listener.enterIfExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIfExpr" ):
                listener.exitIfExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIfExpr" ):
                return visitor.visitIfExpr(self)
            else:
                return visitor.visitChildren(self)




    def ifExpr(self):

        localctx = OnionParser.IfExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_ifExpr)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 162
            self.match(OnionParser.T__0)
            self.state = 163
            self.match(OnionParser.T__17)
            self.state = 164
            self.expression()
            self.state = 165
            self.match(OnionParser.T__18)
            self.state = 166
            self.statement()
            self.state = 169
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==20:
                self.state = 167
                self.match(OnionParser.T__19)
                self.state = 168
                self.statement()


            self.state = 171
            self.match(OnionParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FunctionCallContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(OnionParser.IDENTIFIER, 0)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(OnionParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(OnionParser.ExpressionContext,i)


        def getRuleIndex(self):
            return OnionParser.RULE_functionCall

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunctionCall" ):
                listener.enterFunctionCall(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunctionCall" ):
                listener.exitFunctionCall(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunctionCall" ):
                return visitor.visitFunctionCall(self)
            else:
                return visitor.visitChildren(self)




    def functionCall(self):

        localctx = OnionParser.FunctionCallContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_functionCall)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 173
            self.match(OnionParser.T__0)
            self.state = 174
            self.match(OnionParser.IDENTIFIER)
            self.state = 175
            self.expression()
            self.state = 179
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 1006632962) != 0):
                self.state = 176
                self.expression()
                self.state = 181
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 182
            self.match(OnionParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PrintStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self):
            return self.getTypedRuleContext(OnionParser.ExpressionContext,0)


        def getRuleIndex(self):
            return OnionParser.RULE_printStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrintStatement" ):
                listener.enterPrintStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrintStatement" ):
                listener.exitPrintStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPrintStatement" ):
                return visitor.visitPrintStatement(self)
            else:
                return visitor.visitChildren(self)




    def printStatement(self):

        localctx = OnionParser.PrintStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_printStatement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 184
            self.match(OnionParser.T__0)
            self.state = 185
            self.match(OnionParser.T__20)
            self.state = 186
            self.expression()
            self.state = 187
            self.match(OnionParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LoopStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(OnionParser.IDENTIFIER, 0)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(OnionParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(OnionParser.ExpressionContext,i)


        def statement(self):
            return self.getTypedRuleContext(OnionParser.StatementContext,0)


        def getRuleIndex(self):
            return OnionParser.RULE_loopStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLoopStatement" ):
                listener.enterLoopStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLoopStatement" ):
                listener.exitLoopStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLoopStatement" ):
                return visitor.visitLoopStatement(self)
            else:
                return visitor.visitChildren(self)




    def loopStatement(self):

        localctx = OnionParser.LoopStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_loopStatement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 189
            self.match(OnionParser.T__0)
            self.state = 190
            self.match(OnionParser.T__21)
            self.state = 191
            self.match(OnionParser.T__0)
            self.state = 192
            self.match(OnionParser.IDENTIFIER)
            self.state = 193
            self.expression()
            self.state = 194
            self.expression()
            self.state = 195
            self.match(OnionParser.T__2)
            self.state = 196
            self.statement()
            self.state = 197
            self.match(OnionParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MacroDefContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self, i:int=None):
            if i is None:
                return self.getTokens(OnionParser.IDENTIFIER)
            else:
                return self.getToken(OnionParser.IDENTIFIER, i)

        def block(self):
            return self.getTypedRuleContext(OnionParser.BlockContext,0)


        def getRuleIndex(self):
            return OnionParser.RULE_macroDef

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMacroDef" ):
                listener.enterMacroDef(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMacroDef" ):
                listener.exitMacroDef(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMacroDef" ):
                return visitor.visitMacroDef(self)
            else:
                return visitor.visitChildren(self)




    def macroDef(self):

        localctx = OnionParser.MacroDefContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_macroDef)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 199
            self.match(OnionParser.T__0)
            self.state = 200
            self.match(OnionParser.T__22)
            self.state = 201
            self.match(OnionParser.IDENTIFIER)
            self.state = 202
            self.match(OnionParser.T__0)
            self.state = 211
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==26:
                self.state = 203
                self.match(OnionParser.IDENTIFIER)
                self.state = 208
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==16:
                    self.state = 204
                    self.match(OnionParser.T__15)
                    self.state = 205
                    self.match(OnionParser.IDENTIFIER)
                    self.state = 210
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)



            self.state = 213
            self.match(OnionParser.T__2)
            self.state = 214
            self.block()
            self.state = 215
            self.match(OnionParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MacroCallContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(OnionParser.IDENTIFIER, 0)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(OnionParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(OnionParser.ExpressionContext,i)


        def getRuleIndex(self):
            return OnionParser.RULE_macroCall

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMacroCall" ):
                listener.enterMacroCall(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMacroCall" ):
                listener.exitMacroCall(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMacroCall" ):
                return visitor.visitMacroCall(self)
            else:
                return visitor.visitChildren(self)




    def macroCall(self):
